CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

INCLUDE_DIRECTORIES(.
            ${CMAKE_SOURCE_DIR}/3rdParty/SDL/include/
        )

ADD_SUBDIRECTORY(DisplayBMPPicture)
ADD_SUBDIRECTORY(DisplayPictures)
ADD_SUBDIRECTORY(Lessons3)
ADD_SUBDIRECTORY(Lessons4)
ADD_SUBDIRECTORY(Lesson5)
ADD_SUBDIRECTORY(Lessons6)
ADD_SUBDIRECTORY(Lessons7)
ADD_SUBDIRECTORY(Lessons8)


ADD_SUBDIRECTORY(testCPP)

AUX_SOURCE_DIRECTORY(. SRC)

ADD_EXECUTABLE(Test ${SRC})

TARGET_LINK_LIBRARIES(Test ${ThirdParty}/SDL/lib/libSDL2.so)




