CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

INCLUDE_DIRECTORIES(.
            ${CMAKE_SOURCE_DIR}/3rdParty/SDL/include/
        )

ADD_SUBDIRECTORY(SDL_Learn1/DisplayBMPPicture)
ADD_SUBDIRECTORY(SDL_Learn1/DisplayPictures)
ADD_SUBDIRECTORY(SDL_Learn1/Lessons3)
ADD_SUBDIRECTORY(SDL_Learn1/Lessons4)
ADD_SUBDIRECTORY(SDL_Learn1/Lesson5)
ADD_SUBDIRECTORY(SDL_Learn1/Lessons6)
ADD_SUBDIRECTORY(SDL_Learn1/Lessons7)
ADD_SUBDIRECTORY(SDL_Learn1/Lessons8)


ADD_SUBDIRECTORY(testCPP)

AUX_SOURCE_DIRECTORY(. SRC)

ADD_EXECUTABLE(Test ${SRC})

TARGET_LINK_LIBRARIES(Test ${ThirdParty}/SDL/lib/libSDL2.so)




