CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

INCLUDE_DIRECTORIES(.
        ${CMAKE_SOURCE_DIR}/3rdParty/SDL/include/
        )

AUX_SOURCE_DIRECTORY(. SRC)

LINK_LIBRARIES(${CMAKE_SOURCE_DIR}/3rdParty/SDL/lib/)

ADD_EXECUTABLE(Test_BMP ${SRC})

TARGET_LINK_LIBRARIES(Test_BMP ${ThirdParty}/SDL/lib/libSDL2.so)